# PokerTH-Qt6

./: .gitignore  CMakeLists.txt  README.md  pokerth.cpp  pokerth.qml  pokerth.sh  qtquickcontrols2.conf
components/: CustomCheckBox.qml  CustomComboBox.qml  CustomToggle.qml  GamePlayerBox.qml  GamePlayerSelfBox.qml  GuiSettings.qml  InternetGameSettings.qml  LocalGameSettings.qml  LogsSettings.qml  NetworkGameSettings.qml  NicknameAvatarSettings.qml  ResetSettings.qml  SideMenu.qml  SoundSettings.qml  StartPageButton.qml  StyleSettings.qml
config/: Settings.qml
i18n/: pokerth_de_DE.ts  pokerth_en_US.ts  pokerth_fr_FR.ts
pages/: AboutPage.qml  GamePage.qml  InternetGamePage.qml  LocalGamePage.qml  LogsPage.qml  NetworkGameCreatePage.qml  NetworkGameEnterPage.qml  PreLoader.qml  SettingsPage.qml  StartPage.qml
